fixed bug, finished assigned to, finished spacing

--- a/todo_tracker_hw3/client/src/css/layout.scss
+++ b/todo_tracker_hw3/client/src/css/layout.scss
@@ -88,8 +88,8 @@ html {
 
 .table-entry-buttons {
     padding: 0;
-    margin-left: 18px;
-    margin-right: 18px;
+    margin-left: 36px;
+    //margin-right: 18px;
 }
 
 .table-entry {
@@ -98,6 +98,7 @@ html {
 }
 
 .button-group {
+    float: right;
     height: 100%;
     display: flex;
     align-items: center;
